# rosu_player

./: Cargo.toml  README.md
osu_parser/: Cargo.toml
osu_parser/src/: file.rs  lib.rs
renderer/: Cargo.toml
renderer/src/: game.rs  main.rs
renderer/src/game/: physics_body.rs  player.rs
renderer/src/game/physics_body/: kinematic_body.rs
rosu_parser/: Cargo.toml
rosu_parser/src/: beatmap.rs  lib.rs  osu.rs
rosu_parser/src/beatmap/: events.rs  sections.rs
rosu_parser/src/osu/: sections.rs
rosu_renderer/: Cargo.toml
rosu_renderer/src/: main.rs  player.rs
rosu_renderer/src/player/: hit_object.rs
